Compiler_F74066365_HW3/y.output
Terminals unused in grammar

   ','


Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: StatementList Statement
    3              | Statement

    4 Statement: DeclarationStmt NEWLINE
    5          | SimpleStmt NEWLINE
    6          | Block NEWLINE
    7          | IfStmt NEWLINE
    8          | ForStmt NEWLINE
    9          | PrintStmt NEWLINE
   10          | NEWLINE

   11 DeclarationStmt: VAR IDENT Type
   12                | VAR IDENT Type '=' Expression

   13 TypeName: INT
   14         | FLOAT
   15         | STRING
   16         | BOOL

   17 Type: TypeX TypeName
   18     | TypeName

   19 TypeX: TypeX '[' Expression ']'
   20      | '[' Expression ']'

   21 Expression: Expression LOR Expression2
   22           | Expression2

   23 Expression2: Expression2 LAND Expression3
   24            | Expression3

   25 Expression3: Expression3 '>' Expression5
   26            | Expression3 '<' Expression5
   27            | Expression3 GEQ Expression5
   28            | Expression3 LEQ Expression5
   29            | Expression3 EQL Expression5
   30            | Expression3 NEQ Expression5
   31            | Expression5

   32 Expression5: Expression5 '+' Expression6
   33            | Expression5 '-' Expression6
   34            | Expression6

   35 Expression6: Expression6 '*' Expression7
   36            | Expression6 '/' Expression7
   37            | Expression6 '%' Expression7
   38            | Expression7

   39 Expression7: UnaryExpr

   40 UnaryExpr: UnaryExprX PrimaryExpr
   41          | PrimaryExpr

   42 UnaryExprX: UnaryExprX unary_op
   43           | unary_op

   44 unary_op: '+'
   45         | '-'
   46         | '!'

   47 PrimaryExpr: Operand
   48            | PrimaryExpr '[' Expression ']'
   49            | Type '(' Expression ')'

   50 Operand: INT_LIT
   51        | FLOAT_LIT
   52        | TRUE
   53        | FALSE
   54        | '"' STRING_LIT '"'
   55        | IDENT
   56        | '(' Expression ')'

   57 SimpleStmt: Expression '=' Expression
   58           | Expression ADD_ASSIGN Expression
   59           | Expression SUB_ASSIGN Expression
   60           | Expression MUL_ASSIGN Expression
   61           | Expression QUO_ASSIGN Expression
   62           | Expression REM_ASSIGN Expression
   63           | Expression
   64           | Expression INC
   65           | Expression DEC

   66 $@1: %empty

   67 Block: '{' $@1 StatementList '}'

   68 IfStmt1: IF Expression

   69 IfStmt2: IfStmt1 Block

   70 IfStmt: IfStmt2
   71       | IfStmt2 ELSE Block
   72       | IfStmt2 ELSE IfStmt

   73 ForOperand: FOR

   74 ForStmt2: ForOperand Expression

   75 $@2: %empty

   76 ForStmt3: ForStmt2 '{' $@2 StatementList

   77 ForStmt: ForStmt3 '}'
   78        | ForStmt9

   79 $@3: %empty

   80 ForStmt5: ForOperand SimpleStmt $@3 ';'

   81 ForStmt6: ForStmt5 Expression

   82 $@4: %empty

   83 $@5: %empty

   84 ForStmt7: INC '{' $@4 StatementList $@5 '}'

   85 ForStmt9: ForStmt6 ForStmt8

   86 ForStmt10: ';' Expression

   87 ForStmt8: ForStmt10 ForStmt7

   88 PrintStmt: PRINT '(' Expression ')'
   89          | PRINTLN '(' Expression ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 46
'"' (34) 54
'%' (37) 37
'(' (40) 49 56 88 89
')' (41) 49 56 88 89
'*' (42) 35
'+' (43) 32 44
',' (44)
'-' (45) 33 45
'/' (47) 36
';' (59) 80 86
'<' (60) 26
'=' (61) 12 57
'>' (62) 25
'[' (91) 19 20 48
']' (93) 19 20 48
'{' (123) 67 76 84
'}' (125) 67 77 84
error (256)
VAR (258) 11 12
INT (259) 13
FLOAT (260) 14
BOOL (261) 16
STRING (262) 15
INC (263) 64 84
DEC (264) 65
GEQ (265) 27
LEQ (266) 28
EQL (267) 29
NEQ (268) 30
ADD_ASSIGN (269) 58
SUB_ASSIGN (270) 59
MUL_ASSIGN (271) 60
QUO_ASSIGN (272) 61
REM_ASSIGN (273) 62
LAND (274) 23
LOR (275) 21
NEWLINE (276) 4 5 6 7 8 9 10
PRINT (277) 88
PRINTLN (278) 89
IF (279) 68
ELSE (280) 71 72
FOR (281) 73
TRUE (282) 52
FALSE (283) 53
INT_LIT (284) 50
FLOAT_LIT (285) 51
STRING_LIT (286) 54
IDENT (287) 11 12 55


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
Program (52)
    on left: 1, on right: 0
StatementList (53)
    on left: 2 3, on right: 1 2 67 76 84
Statement (54)
    on left: 4 5 6 7 8 9 10, on right: 2 3
DeclarationStmt (55)
    on left: 11 12, on right: 4
TypeName (56)
    on left: 13 14 15 16, on right: 17 18
Type (57)
    on left: 17 18, on right: 11 12 49
TypeX (58)
    on left: 19 20, on right: 17 19
Expression (59)
    on left: 21 22, on right: 12 19 20 21 48 49 56 57 58 59 60 61 62
    63 64 65 68 74 81 86 88 89
Expression2 (60)
    on left: 23 24, on right: 21 22 23
Expression3 (61)
    on left: 25 26 27 28 29 30 31, on right: 23 24 25 26 27 28 29 30
Expression5 (62)
    on left: 32 33 34, on right: 25 26 27 28 29 30 31 32 33
Expression6 (63)
    on left: 35 36 37 38, on right: 32 33 34 35 36 37
Expression7 (64)
    on left: 39, on right: 35 36 37 38
UnaryExpr (65)
    on left: 40 41, on right: 39
UnaryExprX (66)
    on left: 42 43, on right: 40 42
unary_op (67)
    on left: 44 45 46, on right: 42 43
PrimaryExpr (68)
    on left: 47 48 49, on right: 40 41 48
Operand (69)
    on left: 50 51 52 53 54 55 56, on right: 47
SimpleStmt (70)
    on left: 57 58 59 60 61 62 63 64 65, on right: 5 80
Block (71)
    on left: 67, on right: 6 69 71
$@1 (72)
    on left: 66, on right: 67
IfStmt1 (73)
    on left: 68, on right: 69
IfStmt2 (74)
    on left: 69, on right: 70 71 72
IfStmt (75)
    on left: 70 71 72, on right: 7 72
ForOperand (76)
    on left: 73, on right: 74 80
ForStmt2 (77)
    on left: 74, on right: 76
ForStmt3 (78)
    on left: 76, on right: 77
$@2 (79)
    on left: 75, on right: 76
ForStmt (80)
    on left: 77 78, on right: 8
ForStmt5 (81)
    on left: 80, on right: 81
$@3 (82)
    on left: 79, on right: 80
ForStmt6 (83)
    on left: 81, on right: 85
ForStmt7 (84)
    on left: 84, on right: 87
$@4 (85)
    on left: 82, on right: 84
$@5 (86)
    on left: 83, on right: 84
ForStmt9 (87)
    on left: 85, on right: 78
ForStmt10 (88)
    on left: 86, on right: 87
ForStmt8 (89)
    on left: 87, on right: 85
PrintStmt (90)
    on left: 88 89, on right: 9


State 0

    0 $accept: . Program $end

    VAR        shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    '{'        shift, and go to state 12
    NEWLINE    shift, and go to state 13
    PRINT      shift, and go to state 14
    PRINTLN    shift, and go to state 15
    IF         shift, and go to state 16
    FOR        shift, and go to state 17
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    Program          go to state 23
    StatementList    go to state 24
    Statement        go to state 25
    DeclarationStmt  go to state 26
    TypeName         go to state 27
    Type             go to state 28
    TypeX            go to state 29
    Expression       go to state 30
    Expression2      go to state 31
    Expression3      go to state 32
    Expression5      go to state 33
    Expression6      go to state 34
    Expression7      go to state 35
    UnaryExpr        go to state 36
    UnaryExprX       go to state 37
    unary_op         go to state 38
    PrimaryExpr      go to state 39
    Operand          go to state 40
    SimpleStmt       go to state 41
    Block            go to state 42
    IfStmt1          go to state 43
    IfStmt2          go to state 44
    IfStmt           go to state 45
    ForOperand       go to state 46
    ForStmt2         go to state 47
    ForStmt3         go to state 48
    ForStmt          go to state 49
    ForStmt5         go to state 50
    ForStmt6         go to state 51
    ForStmt9         go to state 52
    PrintStmt        go to state 53


State 1

   11 DeclarationStmt: VAR . IDENT Type
   12                | VAR . IDENT Type '=' Expression

    IDENT  shift, and go to state 54


State 2

   13 TypeName: INT .

    $default  reduce using rule 13 (TypeName)


State 3

   14 TypeName: FLOAT .

    $default  reduce using rule 14 (TypeName)


State 4

   16 TypeName: BOOL .

    $default  reduce using rule 16 (TypeName)


State 5

   15 TypeName: STRING .

    $default  reduce using rule 15 (TypeName)


State 6

   54 Operand: '"' . STRING_LIT '"'

    STRING_LIT  shift, and go to state 55


State 7

   44 unary_op: '+' .

    $default  reduce using rule 44 (unary_op)


State 8

   45 unary_op: '-' .

    $default  reduce using rule 45 (unary_op)


State 9

   46 unary_op: '!' .

    $default  reduce using rule 46 (unary_op)


State 10

   56 Operand: '(' . Expression ')'

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    TypeName     go to state 27
    Type         go to state 28
    TypeX        go to state 29
    Expression   go to state 56
    Expression2  go to state 31
    Expression3  go to state 32
    Expression5  go to state 33
    Expression6  go to state 34
    Expression7  go to state 35
    UnaryExpr    go to state 36
    UnaryExprX   go to state 37
    unary_op     go to state 38
    PrimaryExpr  go to state 39
    Operand      go to state 40


State 11

   20 TypeX: '[' . Expression ']'

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    TypeName     go to state 27
    Type         go to state 28
    TypeX        go to state 29
    Expression   go to state 57
    Expression2  go to state 31
    Expression3  go to state 32
    Expression5  go to state 33
    Expression6  go to state 34
    Expression7  go to state 35
    UnaryExpr    go to state 36
    UnaryExprX   go to state 37
    unary_op     go to state 38
    PrimaryExpr  go to state 39
    Operand      go to state 40


State 12

   67 Block: '{' . $@1 StatementList '}'

    $default  reduce using rule 66 ($@1)

    $@1  go to state 58


State 13

   10 Statement: NEWLINE .

    $default  reduce using rule 10 (Statement)


State 14

   88 PrintStmt: PRINT . '(' Expression ')'

    '('  shift, and go to state 59


State 15

   89 PrintStmt: PRINTLN . '(' Expression ')'

    '('  shift, and go to state 60


State 16

   68 IfStmt1: IF . Expression

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    TypeName     go to state 27
    Type         go to state 28
    TypeX        go to state 29
    Expression   go to state 61
    Expression2  go to state 31
    Expression3  go to state 32
    Expression5  go to state 33
    Expression6  go to state 34
    Expression7  go to state 35
    UnaryExpr    go to state 36
    UnaryExprX   go to state 37
    unary_op     go to state 38
    PrimaryExpr  go to state 39
    Operand      go to state 40


State 17

   73 ForOperand: FOR .

    $default  reduce using rule 73 (ForOperand)


State 18

   52 Operand: TRUE .

    $default  reduce using rule 52 (Operand)


State 19

   53 Operand: FALSE .

    $default  reduce using rule 53 (Operand)


State 20

   50 Operand: INT_LIT .

    $default  reduce using rule 50 (Operand)


State 21

   51 Operand: FLOAT_LIT .

    $default  reduce using rule 51 (Operand)


State 22

   55 Operand: IDENT .

    $default  reduce using rule 55 (Operand)


State 23

    0 $accept: Program . $end

    $end  shift, and go to state 62


State 24

    1 Program: StatementList .
    2 StatementList: StatementList . Statement

    VAR        shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    '{'        shift, and go to state 12
    NEWLINE    shift, and go to state 13
    PRINT      shift, and go to state 14
    PRINTLN    shift, and go to state 15
    IF         shift, and go to state 16
    FOR        shift, and go to state 17
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    $default  reduce using rule 1 (Program)

    Statement        go to state 63
    DeclarationStmt  go to state 26
    TypeName         go to state 27
    Type             go to state 28
    TypeX            go to state 29
    Expression       go to state 30
    Expression2      go to state 31
    Expression3      go to state 32
    Expression5      go to state 33
    Expression6      go to state 34
    Expression7      go to state 35
    UnaryExpr        go to state 36
    UnaryExprX       go to state 37
    unary_op         go to state 38
    PrimaryExpr      go to state 39
    Operand          go to state 40
    SimpleStmt       go to state 41
    Block            go to state 42
    IfStmt1          go to state 43
    IfStmt2          go to state 44
    IfStmt           go to state 45
    ForOperand       go to state 46
    ForStmt2         go to state 47
    ForStmt3         go to state 48
    ForStmt          go to state 49
    ForStmt5         go to state 50
    ForStmt6         go to state 51
    ForStmt9         go to state 52
    PrintStmt        go to state 53


State 25

    3 StatementList: Statement .

    $default  reduce using rule 3 (StatementList)


State 26

    4 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 64


State 27

   18 Type: TypeName .

    $default  reduce using rule 18 (Type)


State 28

   49 PrimaryExpr: Type . '(' Expression ')'

    '('  shift, and go to state 65


State 29

   17 Type: TypeX . TypeName
   19 TypeX: TypeX . '[' Expression ']'

    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    BOOL    shift, and go to state 4
    STRING  shift, and go to state 5
    '['     shift, and go to state 66

    TypeName  go to state 67


State 30

   21 Expression: Expression . LOR Expression2
   57 SimpleStmt: Expression . '=' Expression
   58           | Expression . ADD_ASSIGN Expression
   59           | Expression . SUB_ASSIGN Expression
   60           | Expression . MUL_ASSIGN Expression
   61           | Expression . QUO_ASSIGN Expression
   62           | Expression . REM_ASSIGN Expression
   63           | Expression .
   64           | Expression . INC
   65           | Expression . DEC

    INC         shift, and go to state 68
    DEC         shift, and go to state 69
    '='         shift, and go to state 70
    ADD_ASSIGN  shift, and go to state 71
    SUB_ASSIGN  shift, and go to state 72
    MUL_ASSIGN  shift, and go to state 73
    QUO_ASSIGN  shift, and go to state 74
    REM_ASSIGN  shift, and go to state 75
    LOR         shift, and go to state 76

    $default  reduce using rule 63 (SimpleStmt)


State 31

   22 Expression: Expression2 .
   23 Expression2: Expression2 . LAND Expression3

    LAND  shift, and go to state 77

    $default  reduce using rule 22 (Expression)


State 32

   24 Expression2: Expression3 .
   25 Expression3: Expression3 . '>' Expression5
   26            | Expression3 . '<' Expression5
   27            | Expression3 . GEQ Expression5
   28            | Expression3 . LEQ Expression5
   29            | Expression3 . EQL Expression5
   30            | Expression3 . NEQ Expression5

    '>'  shift, and go to state 78
    '<'  shift, and go to state 79
    GEQ  shift, and go to state 80
    LEQ  shift, and go to state 81
    EQL  shift, and go to state 82
    NEQ  shift, and go to state 83

    $default  reduce using rule 24 (Expression2)


State 33

   31 Expression3: Expression5 .
   32 Expression5: Expression5 . '+' Expression6
   33            | Expression5 . '-' Expression6

    '+'  shift, and go to state 84
    '-'  shift, and go to state 85

    $default  reduce using rule 31 (Expression3)


State 34

   34 Expression5: Expression6 .
   35 Expression6: Expression6 . '*' Expression7
   36            | Expression6 . '/' Expression7
   37            | Expression6 . '%' Expression7

    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    '%'  shift, and go to state 88

    $default  reduce using rule 34 (Expression5)


State 35

   38 Expression6: Expression7 .

    $default  reduce using rule 38 (Expression6)


State 36

   39 Expression7: UnaryExpr .

    $default  reduce using rule 39 (Expression7)


State 37

   40 UnaryExpr: UnaryExprX . PrimaryExpr
   42 UnaryExprX: UnaryExprX . unary_op

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    TypeName     go to state 27
    Type         go to state 28
    TypeX        go to state 29
    unary_op     go to state 89
    PrimaryExpr  go to state 90
    Operand      go to state 40


State 38

   43 UnaryExprX: unary_op .

    $default  reduce using rule 43 (UnaryExprX)


State 39

   41 UnaryExpr: PrimaryExpr .
   48 PrimaryExpr: PrimaryExpr . '[' Expression ']'

    '['  shift, and go to state 91

    $default  reduce using rule 41 (UnaryExpr)


State 40

   47 PrimaryExpr: Operand .

    $default  reduce using rule 47 (PrimaryExpr)


State 41

    5 Statement: SimpleStmt . NEWLINE

    NEWLINE  shift, and go to state 92


State 42

    6 Statement: Block . NEWLINE

    NEWLINE  shift, and go to state 93


State 43

   69 IfStmt2: IfStmt1 . Block

    '{'  shift, and go to state 12

    Block  go to state 94


State 44

   70 IfStmt: IfStmt2 .
   71       | IfStmt2 . ELSE Block
   72       | IfStmt2 . ELSE IfStmt

    ELSE  shift, and go to state 95

    $default  reduce using rule 70 (IfStmt)


State 45

    7 Statement: IfStmt . NEWLINE

    NEWLINE  shift, and go to state 96


State 46

   74 ForStmt2: ForOperand . Expression
   80 ForStmt5: ForOperand . SimpleStmt $@3 ';'

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    TypeName     go to state 27
    Type         go to state 28
    TypeX        go to state 29
    Expression   go to state 97
    Expression2  go to state 31
    Expression3  go to state 32
    Expression5  go to state 33
    Expression6  go to state 34
    Expression7  go to state 35
    UnaryExpr    go to state 36
    UnaryExprX   go to state 37
    unary_op     go to state 38
    PrimaryExpr  go to state 39
    Operand      go to state 40
    SimpleStmt   go to state 98


State 47

   76 ForStmt3: ForStmt2 . '{' $@2 StatementList

    '{'  shift, and go to state 99


State 48

   77 ForStmt: ForStmt3 . '}'

    '}'  shift, and go to state 100


State 49

    8 Statement: ForStmt . NEWLINE

    NEWLINE  shift, and go to state 101


State 50

   81 ForStmt6: ForStmt5 . Expression

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    TypeName     go to state 27
    Type         go to state 28
    TypeX        go to state 29
    Expression   go to state 102
    Expression2  go to state 31
    Expression3  go to state 32
    Expression5  go to state 33
    Expression6  go to state 34
    Expression7  go to state 35
    UnaryExpr    go to state 36
    UnaryExprX   go to state 37
    unary_op     go to state 38
    PrimaryExpr  go to state 39
    Operand      go to state 40


State 51

   85 ForStmt9: ForStmt6 . ForStmt8

    ';'  shift, and go to state 103

    ForStmt10  go to state 104
    ForStmt8   go to state 105


State 52

   78 ForStmt: ForStmt9 .

    $default  reduce using rule 78 (ForStmt)


State 53

    9 Statement: PrintStmt . NEWLINE

    NEWLINE  shift, and go to state 106


State 54

   11 DeclarationStmt: VAR IDENT . Type
   12                | VAR IDENT . Type '=' Expression

    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    BOOL    shift, and go to state 4
    STRING  shift, and go to state 5
    '['     shift, and go to state 11

    TypeName  go to state 27
    Type      go to state 107
    TypeX     go to state 29


State 55

   54 Operand: '"' STRING_LIT . '"'

    '"'  shift, and go to state 108


State 56

   21 Expression: Expression . LOR Expression2
   56 Operand: '(' Expression . ')'

    LOR  shift, and go to state 76
    ')'  shift, and go to state 109


State 57

   20 TypeX: '[' Expression . ']'
   21 Expression: Expression . LOR Expression2

    LOR  shift, and go to state 76
    ']'  shift, and go to state 110


State 58

   67 Block: '{' $@1 . StatementList '}'

    VAR        shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    '{'        shift, and go to state 12
    NEWLINE    shift, and go to state 13
    PRINT      shift, and go to state 14
    PRINTLN    shift, and go to state 15
    IF         shift, and go to state 16
    FOR        shift, and go to state 17
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    StatementList    go to state 111
    Statement        go to state 25
    DeclarationStmt  go to state 26
    TypeName         go to state 27
    Type             go to state 28
    TypeX            go to state 29
    Expression       go to state 30
    Expression2      go to state 31
    Expression3      go to state 32
    Expression5      go to state 33
    Expression6      go to state 34
    Expression7      go to state 35
    UnaryExpr        go to state 36
    UnaryExprX       go to state 37
    unary_op         go to state 38
    PrimaryExpr      go to state 39
    Operand          go to state 40
    SimpleStmt       go to state 41
    Block            go to state 42
    IfStmt1          go to state 43
    IfStmt2          go to state 44
    IfStmt           go to state 45
    ForOperand       go to state 46
    ForStmt2         go to state 47
    ForStmt3         go to state 48
    ForStmt          go to state 49
    ForStmt5         go to state 50
    ForStmt6         go to state 51
    ForStmt9         go to state 52
    PrintStmt        go to state 53


State 59

   88 PrintStmt: PRINT '(' . Expression ')'

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    TypeName     go to state 27
    Type         go to state 28
    TypeX        go to state 29
    Expression   go to state 112
    Expression2  go to state 31
    Expression3  go to state 32
    Expression5  go to state 33
    Expression6  go to state 34
    Expression7  go to state 35
    UnaryExpr    go to state 36
    UnaryExprX   go to state 37
    unary_op     go to state 38
    PrimaryExpr  go to state 39
    Operand      go to state 40


State 60

   89 PrintStmt: PRINTLN '(' . Expression ')'

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    TypeName     go to state 27
    Type         go to state 28
    TypeX        go to state 29
    Expression   go to state 113
    Expression2  go to state 31
    Expression3  go to state 32
    Expression5  go to state 33
    Expression6  go to state 34
    Expression7  go to state 35
    UnaryExpr    go to state 36
    UnaryExprX   go to state 37
    unary_op     go to state 38
    PrimaryExpr  go to state 39
    Operand      go to state 40


State 61

   21 Expression: Expression . LOR Expression2
   68 IfStmt1: IF Expression .

    LOR  shift, and go to state 76

    $default  reduce using rule 68 (IfStmt1)


State 62

    0 $accept: Program $end .

    $default  accept


State 63

    2 StatementList: StatementList Statement .

    $default  reduce using rule 2 (StatementList)


State 64

    4 Statement: DeclarationStmt NEWLINE .

    $default  reduce using rule 4 (Statement)


State 65

   49 PrimaryExpr: Type '(' . Expression ')'

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    TypeName     go to state 27
    Type         go to state 28
    TypeX        go to state 29
    Expression   go to state 114
    Expression2  go to state 31
    Expression3  go to state 32
    Expression5  go to state 33
    Expression6  go to state 34
    Expression7  go to state 35
    UnaryExpr    go to state 36
    UnaryExprX   go to state 37
    unary_op     go to state 38
    PrimaryExpr  go to state 39
    Operand      go to state 40


State 66

   19 TypeX: TypeX '[' . Expression ']'

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    TypeName     go to state 27
    Type         go to state 28
    TypeX        go to state 29
    Expression   go to state 115
    Expression2  go to state 31
    Expression3  go to state 32
    Expression5  go to state 33
    Expression6  go to state 34
    Expression7  go to state 35
    UnaryExpr    go to state 36
    UnaryExprX   go to state 37
    unary_op     go to state 38
    PrimaryExpr  go to state 39
    Operand      go to state 40


State 67

   17 Type: TypeX TypeName .

    $default  reduce using rule 17 (Type)


State 68

   64 SimpleStmt: Expression INC .

    $default  reduce using rule 64 (SimpleStmt)


State 69

   65 SimpleStmt: Expression DEC .

    $default  reduce using rule 65 (SimpleStmt)


State 70

   57 SimpleStmt: Expression '=' . Expression

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    TypeName     go to state 27
    Type         go to state 28
    TypeX        go to state 29
    Expression   go to state 116
    Expression2  go to state 31
    Expression3  go to state 32
    Expression5  go to state 33
    Expression6  go to state 34
    Expression7  go to state 35
    UnaryExpr    go to state 36
    UnaryExprX   go to state 37
    unary_op     go to state 38
    PrimaryExpr  go to state 39
    Operand      go to state 40


State 71

   58 SimpleStmt: Expression ADD_ASSIGN . Expression

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    TypeName     go to state 27
    Type         go to state 28
    TypeX        go to state 29
    Expression   go to state 117
    Expression2  go to state 31
    Expression3  go to state 32
    Expression5  go to state 33
    Expression6  go to state 34
    Expression7  go to state 35
    UnaryExpr    go to state 36
    UnaryExprX   go to state 37
    unary_op     go to state 38
    PrimaryExpr  go to state 39
    Operand      go to state 40


State 72

   59 SimpleStmt: Expression SUB_ASSIGN . Expression

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22

    TypeName     go to state 27
    Type         go to state 28
    TypeX        go to state 29
    Expression   go to state 118
    Expression2  go to state 31
    Expression3  go to state 32
    Expression5  go to state 33
    Expression6  go to state 34
    Expression7  go to state 35
    UnaryExpr    go to state 36
    UnaryExprX   go to state 37
    unary_op     go to state 38
    PrimaryExpr  go to state 39
    Operand      go to state 40


State 73

   60 SimpleStmt: Expression MUL_ASSIGN . Expression

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    STRING     shift, and go to state 5
    '"'        shift, and go to state 6
    '+'        shift, and go to state 7
    '-'        shift, and go to state 8
    '!'        shift, and go to state 9
    '('        shift, and go to state 10
    '['        shift, and go to state 11
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    INT_LIT    shift, and go to state 20
    FLOAT_LIT  shift, and go to state 21
    IDENT      shift, and go to state 22
